--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                 <a href="index.html">Home Page</a>
             </li>
             <li>
-                <a href="https://www.w3.org/WAI/fundamentals/accessibility-intro/">Link 2</a>
+                <a href="https://www.w3.org/WAI/fundamentals/accessibility-intro/">Intro to Web Accesibility</a>
             </li>
             <li>
-                <a href="https://www.w3.org/TR/WCAG21/">Link 3</a>
+                <a href="https://www.w3.org/TR/WCAG21/">Web Guidelines</a>
             </li>
         </ul>
     </div>
@@ -31,15 +31,15 @@
         <hr>
         <h1 class="flashy-text">Contact Us</h1>
         <h6>We my take 3-6 business days to respond</h6>
-        <h5>Click the green button to submit or the red button to clear the form</h5>
+        <h5>Click the Submit Form button to submit or the Clear Form to clear the form</h5>
         <form>
             <h2>Contact Form</h2>
             <div>
-                Your First Name:
+                <label for="firstname">Your First Name:</label>
                 <input type="text" name="firstname" id="firstname">
             </div>
             <div>
-                Your Last Name:
+                <label for="lastname">Your Last Name:</label>
                 <input type="text" name="lastname" id="lastname">
             </div>
             <div>
@@ -55,23 +55,25 @@
                 Other Notes:
                 <textarea></textarea>
             </div>
-            <input type="submit" class="btn1">
-            <input type="submit" class="btn2">
+            <label for clear>Clear Form</label>
+            <input id="clear" type="submit" class="btn1" value="Clear Form">
+            <label for clear>Submit Form</label>
+            <input id="clear" type="submit" class="btn2"value="Submit Form">
         </form>
         <hr>
         <h1 class="flashy-text">Directions</h1>
         <div class="section">
             <div>
-                <img src="assets/images/car.png"> 20 mins 
+                <img src="assets/images/car.png" alt="car icon"> 20 mins 
             </div>
             <div>
-                <img src="assets/images/bicycle.png"> 35 mins
+                <img src="assets/images/bicycle.png" alt="bike"> 35 mins
             </div>
             <div>
-                <img src="assets/images/ferry.png"> 50 mins
+                <img src="assets/images/ferry.png" alt="ferry"> 50 mins
             </div>
             <div>
-                <img src="assets/images/bus.png"> 55 mins
+                <img src="assets/images/bus.png" alt="bus"> 55 mins
             </div>
         </div>
         <div>
@@ -85,7 +87,7 @@
     <div class="footer">
         Thanks for stopping by ❤️ 
         <div>
-            <img src="assets/images/logo.png">
+            <img src="assets/images/logo.png"  alt="four baloons site logo" >
             <a href="https://creazilla.com/nodes/64384-colourful-balloons-clipart">Cute logo provided by ElisaRiva via Pixabay</a>
         </div>
     </div>
